loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: not found: value isGroundWhite
while (isGroundWhite){
       ^